--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -20,7 +20,7 @@
                 <li><a id ="home" href="/patient/main">Home</a></li>
                 <!-- <li><a href="#">Profile</a></li> -->
                 <li><a id="consult" href="/patient/main/consult">Consult</a></li>
-                <li><a href="/patient/getmed">Pharmacy</a></li>
+                <li><a href="/patient/getmed?q=All">Pharmacy</a></li>
                 <li><i class="fa-solid fa-magnifying-glass"></i></li>
             </ul>
         </nav>
