--- a/views/doctorlogin.ejs
+++ b/views/doctorlogin.ejs
@@ -66,6 +66,7 @@ iframe{
         </div>
     </div>
     <script src="/login.js"></script>
+    <script src="../sendalert.js"></script>
 
 </body>
 
