--- a/frontend/src/css/patienthome.css
+++ b/frontend/src/css/patienthome.css
@@ -14,6 +14,29 @@
   --shadow-lg: 0 10px 25px rgba(0, 0, 0, 0.07);
 }
 
+
+.name-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.info-icon {
+  color: #007bff;
+  margin-left: 8px;
+  text-decoration: none;
+  transition: color 0.2s ease;
+}
+
+.info-icon:hover {
+  color: #0056b3;
+}
+
+.hospital{
+  color:green;
+  font-size: 0.9rem;
+}
+
 .booknow {
   display: inline-block;          /* makes padding work nicely */
   background-color: #3498db;
@@ -458,7 +481,6 @@ margin-bottom: 1rem;
   font-size: 1.05rem;
   font-weight: 600;
   color: #349ce3;
-  margin-bottom: 4px;
 }
 
 .featured-doctor-card .speciality {
